--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -5,5 +5,8 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "typeAcquisition": {
+    "enable": false
+  }
 }
