--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,53 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "@eslint/js": "9.23.0",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/body-parser": "^1.19.6",
+    "@types/connect": "^3.4.38",
+    "@types/connect-history-api-fallback": "^1.5.4",
+    "@types/d3-array": "^3.2.2",
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-ease": "^3.0.2",
+    "@types/d3-interpolate": "^3.0.4",
+    "@types/d3-path": "^3.1.1",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-shape": "^3.1.7",
+    "@types/d3-time": "^3.0.4",
+    "@types/d3-timer": "^3.0.2",
+    "@types/eslint": "^9.6.1",
+    "@types/eslint-scope": "^8.3.2",
+    "@types/estree": "^1.0.8",
+    "@types/express": "^5.0.6",
+    "@types/express-serve-static-core": "^5.1.0",
+    "@types/http-errors": "^2.0.5",
+    "@types/http-proxy": "^1.17.17",
+    "@types/istanbul-lib-coverage": "^2.0.6",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/istanbul-reports": "^3.0.4",
+    "@types/json-schema": "^7.0.15",
+    "@types/mime": "^4.0.0",
+    "@types/node": "^24.10.1",
+    "@types/parse-json": "^7.0.0",
+    "@types/prettier": "^3.0.0",
+    "@types/q": "^1.5.8",
+    "@types/qs": "^6.14.0",
+    "@types/range-parser": "^1.2.7",
+    "@types/resolve": "^1.20.6",
+    "@types/retry": "^0.12.5",
+    "@types/semver": "^7.7.1",
+    "@types/send": "^1.2.1",
+    "@types/serve-index": "^1.9.4",
+    "@types/serve-static": "^2.2.0",
+    "@types/sockjs": "^0.3.36",
+    "@types/stack-utils": "^2.0.3",
+    "@types/trusted-types": "^2.0.7",
+    "@types/use-sync-external-store": "^1.5.0",
+    "@types/ws": "^8.18.1",
+    "@types/yargs": "^17.0.35",
+    "@types/yargs-parser": "^21.0.3",
     "autoprefixer": "^10.4.20",
     "eslint": "9.23.0",
     "eslint-plugin-import": "2.31.0",
