--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -2,10 +2,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     }
   },
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "typeAcquisition": {
     "enable": false
   }
